Fix table overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4369,6 +4369,9 @@ textarea.form-control.is-invalid {
 .-m-2 {
   margin: -0.5rem;
 }
+.m-6 {
+  margin: 1.5rem;
+}
 .my-1 {
   margin-top: 0.25rem;
   margin-bottom: 0.25rem;
@@ -4586,8 +4589,28 @@ textarea.form-control.is-invalid {
 .h-48 {
   height: 12rem;
 }
+.h-\[calc\(100\%-10rem\)\] {
+  height: calc(100% - 10rem);
+}
+.h-\[calc\(100vh-10rem\)\] {
+  height: calc(100vh - 10rem);
+}
+.h-\[calc\(100vh-12rem\)\] {
+  height: calc(100vh - 12rem);
+}
+.h-max {
+  height: -webkit-max-content;
+  height: -moz-max-content;
+  height: max-content;
+}
 .max-h-screen {
   max-height: 100vh;
+}
+.max-h-80 {
+  max-height: 20rem;
+}
+.max-h-\[calc\(100vh-12rem\)\] {
+  max-height: calc(100vh - 12rem);
 }
 .min-h-screen {
   min-height: 100vh;
@@ -6029,6 +6052,11 @@ select {
     margin-bottom: 0px;
   }
 
+  .sm\:-mx-2 {
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
+  }
+
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
@@ -6108,6 +6136,21 @@ select {
   .sm\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .sm\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .sm\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .sm\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .sm\:pt-0 {
@@ -6246,6 +6289,11 @@ select {
     padding-right: 0.25rem;
   }
 
+  .md\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
   .md\:pt-2 {
     padding-top: 0.5rem;
   }
@@ -6255,6 +6303,11 @@ select {
   .lg\:-mx-8 {
     margin-left: -2rem;
     margin-right: -2rem;
+  }
+
+  .lg\:-mx-2 {
+    margin-left: -0.5rem;
+    margin-right: -0.5rem;
   }
 
   .lg\:block {
@@ -6280,6 +6333,21 @@ select {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .lg\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .lg\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 @media (min-width: 1536px) {
